--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<body>
 <app-header></app-header>
 <div class = "container">
   <div class= "row">
@@ -7,3 +8,4 @@
     </div>
   </div>
 </div>
+</body>>
