--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
       <a href="#" class="navbar-brand">Recipe Book</a>
     </div>
 
-    <div class="navbar-default">
+    <div class="navbar-inverse">
       <ul class="nav navbar-nav">
         <li><a href="#">Recipes</a></li>
         <li><a href="#">Shopping List</a></li>
