--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
-<body>
+
 <app-header (featureSelected)="onNavigate($event)"></app-header>
 <div class = "container">
   <div class= "row">
     <div class="col-md-12">
       <app-recipes *ngIf="loadedFeature ==='Recipes'"></app-recipes>
-      <app-shopping-list *ngIf="loadedFeature ==='Shopping-List'"></app-shopping-list>
+      <app-shopping-list *ngIf="loadedFeature !=='Recipes'"></app-shopping-list>
     </div>
   </div>
 </div>
-</body>
